# BachelorProject

Datadriven/csv files/: haptics_round_canvas_f.csv  haptics_round_canvas_m.csv  haptics_round_canvas_s.csv  haptics_round_glass_f.csv  haptics_round_glass_m.csv  haptics_round_glass_s.csv  haptics_round_silk_f.csv  haptics_round_silk_m.csv  haptics_round_silk_s.csv  haptics_round_wood_f.csv  haptics_round_wood_m.csv  haptics_round_wood_s.csv  haptics_square_canvas_f.csv  haptics_square_canvas_m.csv  haptics_square_canvas_s.csv  haptics_square_glass_f.csv  haptics_square_glass_m.csv  haptics_square_glass_s.csv  haptics_square_silk_f.csv  haptics_square_silk_m.csv  haptics_square_silk_s.csv  haptics_square_wood_f.csv  haptics_square_wood_m.csv  haptics_square_wood_s.csv  haptics_thin_canvas_f.csv  haptics_thin_canvas_m.csv  haptics_thin_canvas_s.csv  haptics_thin_glass_f.csv  haptics_thin_glass_m.csv  haptics_thin_glass_s.csv  haptics_thin_silk_f.csv  haptics_thin_silk_m.csv  haptics_thin_silk_s.csv  haptics_thin_wood_f.csv  haptics_thin_wood_m.csv  haptics_thin_wood_s.csv
Datadriven/flick&dead/: haptics_round_canvas_fl.csv  haptics_round_glass_d.csv  haptics_round_glass_fl.csv  (+20 more)
NewPaintingApp/: settings.gradle.kts
Old code/: ControlFeedbackInstrumentedTestOld.java  ControlFeedbackOld.java  DrawingViewCopy.java  DrawingViewOld.java  PlayInterface.java  PlayMusicOld copy.java  PlayMusicOld.java  PlayMusicOldInstrumentedTest.java  Realsim-test-data-bachelor.xlsx  sineWave.ggb
Old code/jni/: CMakeLists.txt  MediaCodecJava.cpp  SoundPool.cpp  SoundPool.h
(+42 files in other folders)
